connect grpc server
