# modules/printer/dto/printer_request.go
@@ -5,7 +5,6 @@ type AddPrinterRequestBody struct {
 	Manufacturer string `json:"manufacturer"`
 	Model        string `json:"model"`
 	SerialNumber string `json:"serial_number"`
-	IPAddress    string `json:"ip_address"`
-	MACAddress   string `json:"mac_address"`
+	URI          string `json:"uri"`
 	Status       string `json:"status"`
 }
